:sparkles: Add controller settings GUI and more WIP on controller support.

--- a/src/main/resources/config.toml
+++ b/src/main/resources/config.toml
@@ -4,29 +4,33 @@
 controls = "default"
 
 [hud]
-# Dertermines where the movements buttons are.
-side = "left"
+    # Dertermines where the movements buttons are.
+    side = "left"
 
 # Controller settings
 [controller]
-attack = "button_7"
-back = "axe_1+"
-drop = "button_2"
-forward = "axe_1-"
-hotbar_left = "button_4"
-hotbar_right = "button_5"
-inventory = "button_3"
-jump = "button_0"
-left = "axe_0-"
-right = "axe_0+"
-sneak = "button_12"
-sprint = "button_11"
-start = "button_4"
-use = "button_6"
-view_down = "axe_3+"
-view_left = "axe_2-"
-view_right = "axe_2+"
-view_up = "axe_3-"
+    dead_zone = 0.25
+    rotation_speed = 25.0
+    # Controller controls
+    [controller.controls]
+        attack = "button_7"
+        back = "axe_1+"
+        drop = "button_2"
+        forward = "axe_1-"
+        hotbar_left = "button_4"
+        hotbar_right = "button_5"
+        inventory = "button_3"
+        jump = "button_0"
+        left = "axe_0-"
+        right = "axe_0+"
+        sneak = "button_12"
+        sprint = "button_11"
+        start = "button_9"
+        use = "button_6"
+        view_down = "axe_3+"
+        view_left = "axe_2-"
+        view_right = "axe_2+"
+        view_up = "axe_3-"
 
 # Colors
 [colors]
