--- a/src/main/resources/config.toml
+++ b/src/main/resources/config.toml
@@ -4,6 +4,8 @@
 controls = "default"
 
 [hud]
+    # Enables the HUD.
+    enable = true
     # Dertermines where the movements buttons are.
     side = "left"
 
@@ -11,6 +13,8 @@ controls = "default"
 [controller]
     # Controller to use.
     id = 0
+    # Controller's type.
+    type = "default"
     # Controller's dead zone.
     dead_zone = 0.20
     # Rotation speed for look directions.
