--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,15 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on https://fabricmc.net/use
 	minecraft_version=1.15
-	yarn_mappings=1.15+build.1:v2
+	yarn_mappings=1.15+build.2:v2
 	loader_version=0.7.2+build.174
 
 # Mod Properties
-	mod_version = 1.0.0-SNAPSHOT2
+	mod_version = 1.0.0
 	maven_group = me.lambdaurora
 	archives_base_name = lambdacontrols
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.4.23+build.276-1.15
+	fabric_version=0.4.25+build.282-1.15
 
