--- a/gradle.properties
+++ b/gradle.properties
@@ -8,11 +8,12 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.7.2+build.174
 
 # Mod Properties
-	mod_version = 1.0.2
+	mod_version = 1.1.0-test1
 	maven_group = me.lambdaurora
 	archives_base_name = lambdacontrols
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.4.25+build.282-1.15
+	fabric_version=0.4.26+build.283-1.15
+	spruceui_version=1.0.1
 
