--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,26 @@ repositories {
 	repositories {
 		maven { url = "https://jitpack.io" }
 	}
+	// SpruceUI
+	ivy {
+		url 'https://github.com/LambdAurora/SpruceUI/releases/download/'
+		patternLayout {
+			artifact '[revision]/[module]-[version].[ext]'
+		}
+		metadataSources() {
+			artifact()
+		}
+	}
+	// OkZoomer
+	ivy {
+		url 'https://github.com/joaoh1/OkZoomer/releases/download/'
+		patternLayout {
+			artifact '[revision]/[module]-[version].[ext]'
+		}
+		metadataSources() {
+			artifact()
+		}
+	}
 }
 
 dependencies {
@@ -40,6 +60,9 @@ dependencies {
 	include "me.lambdaurora:spruceui:${project.spruceui_version}"
 	//modCompile "io.github.cottonmc:cotton-client-commands:0.4.2+1.14.3-SNAPSHOT"
 
+	// Compatibility mods
+	modCompile "io.github.joaoh1:okzoomer:1.0.3"
+
 	implementation "org.jetbrains:annotations:17.0.0"
 	implementation "org.aperlambda:lambdajcommon:1.7.2"
 	implementation "com.electronwill.night-config:core:3.5.3"
@@ -48,9 +71,6 @@ dependencies {
 	include "org.aperlambda:lambdajcommon:1.7.2"
 	include "com.electronwill.night-config:core:3.5.3"
 	include "com.electronwill.night-config:toml:3.5.3"
-
-	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
-	// You may need to force-disable transitiveness on them.
 }
 
 processResources {
