:sparkles: Add new unfocused input option, improve front block placing.

--- a/fabric/src/main/resources/config.toml
+++ b/fabric/src/main/resources/config.toml
@@ -36,6 +36,8 @@ auto_switch_mode = false
     invert_right_x_axis = false
     # Inverts the right Y axis.
     invert_right_y_axis = false
+    # Allow unfocused input.
+    unfocused_input = false
     # Controller controls.
     [controller.controls]
         # Attack control.
