--- a/fabric/src/main/resources/config.toml
+++ b/fabric/src/main/resources/config.toml
@@ -15,8 +15,12 @@ auto_switch_mode = false
 [gameplay]
     # Enables front block placing like in Bedrock Edition.
     front_block_placing = false
-    # Enables fly drifting.
-    fly_drifting = false
+    # Fly behaviors
+    [gameplay.fly]
+        # Enables fly drifting.
+        drifting = false
+        # Enables vertical fly drifting.
+        vertical_drifting = true
 
 # Controller settings
 [controller]
@@ -58,20 +62,36 @@ auto_switch_mode = false
         inventory = "3"
         # Jump control.
         jump = "0"
+        # Left movement control.
+        left = "200"
         # Pause game control.
         pause_game = "7"
         # Pick block control.
         pick_block = "14"
         # Show player list control.
         player_list = "6"
+        # Right movement control.
+        right = "100"
         # Take screenshot control.
         screenshot = "11+0"
+        # Down slot control.
+        slot_down = "13"
+        # Left slot control.
+        slot_left = "14"
+        # Right slot control.
+        slot_right = "12"
+        # Up slot control.
+        slot_up = "11"
         # Sneak control.
         sneak = "10"
         # Sprint control.
         sprint = "9"
         # Swap hands control.
         swap_hands = "2"
+        # Switch to left tab control.
+        tab_left = "4"
+        # Switch to right tab control.
+        tab_right = "5"
         # Toggle perspective control.
         toggle_perspective = "11+3"
         # Toggle smooth camera control.
