--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.15.1
-	yarn_mappings=1.15.1+build.37:v2
-	loader_version=0.7.3+build.176
+	minecraft_version=1.15.2
+	yarn_mappings=1.15.2+build.9:v2
+	loader_version=0.7.6+build.180
 
 # Mod Properties
-	mod_version = 1.1.0-test9
+	mod_version = 1.1.0
 	maven_group = me.lambdaurora
 	archives_base_name = lambdacontrols
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.4.27+build.286-1.15
-	spruceui_version=1.1.0
+	fabric_version=0.4.29+build.290-1.15
+	spruceui_version=1.3.4
 
