--- a/fabric/src/main/resources/config.toml
+++ b/fabric/src/main/resources/config.toml
@@ -15,6 +15,8 @@ auto_switch_mode = false
 [gameplay]
     # Enables front block placing like in Bedrock Edition.
     front_block_placing = false
+    # Enables fast block interaction like in Bedrock Edition.
+    fast_block_interact = true
     # Fly behaviors
     [gameplay.fly]
         # Enables fly drifting.
