--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on https://fabricmc.net/use
 	minecraft_version=1.15.2
-	yarn_mappings=1.15.2+build.9:v2
+	yarn_mappings=1.15.2+build.14:v2
 	loader_version=0.7.6+build.180
 
 # Mod Properties
@@ -16,4 +16,4 @@ org.gradle.jvmargs=-Xmx1G
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
 	fabric_version=0.4.29+build.290-1.15
 	spruceui_version=1.3.4
-
+	modmenu_version=1.10.1+build.30
