:bookmark: LambdaControls v1.3.1: Fix broken inventory interactions and virtual mouse bug.

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,20 @@ allprojects {
 		classifier = "sources"
 		from sourceSets.main.allSource
 	}
+
+	publishing {
+		repositories {
+			mavenLocal()
+			maven {
+				name = "GithubPackages"
+				url = uri("https://maven.pkg.github.com/LambdAurora/LambdaControls")
+				credentials {
+					username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
+					password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
+				}
+			}
+		}
+	}
 }
 
 /*
