--- a/gradle.properties
+++ b/gradle.properties
@@ -8,12 +8,12 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.8.8+build.202
 
 # Mod Properties
-	mod_version = 1.3.0
-	maven_group = me.lambdaurora
+	mod_version = 1.3.1
+	maven_group = me.lambdaurora.lambdacontrols
 	archives_base_name = lambdacontrols
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
 	fabric_version=0.14.0+build.371-1.16
-	spruceui_version=1.5.1
+	spruceui_version=1.5.2
 	modmenu_version=1.12.2+build.17
