--- a/core/build.gradle
+++ b/core/build.gradle
@@ -15,6 +15,8 @@ dependencies {
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
+
+    withSourcesJar()
 }
 
 publishing {
