--- a/gradle.properties
+++ b/gradle.properties
@@ -2,18 +2,18 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.1
-	yarn_mappings=1.16.1+build.21:v2
-	loader_version=0.9.0+build.204
+# check these on https://fabricmc.net/use
+minecraft_version=1.16.2
+yarn_mappings=1.16.2+build.6
+loader_version=0.9.1+build.205
 
 # Mod Properties
-	mod_version = 1.4.2
-	maven_group = me.lambdaurora.lambdacontrols
-	archives_base_name = lambdacontrols
+mod_version = 1.4.3
+maven_group = me.lambdaurora.lambdacontrols
+archives_base_name = lambdacontrols
 
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.15.0+build.379-1.16.1
-	spruceui_version=1.5.11
-	modmenu_version=1.12.2+build.17
+# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
+fabric_version=0.17.2+build.396-1.16
+spruceui_version=1.6.4
+modmenu_version=1.14.6+build.31
