Fix issues, improve REI compat and horizontal reach-around, WIP on ring.

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,11 +4,11 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/use
 minecraft_version=1.16.2
-yarn_mappings=1.16.2+build.6
+yarn_mappings=1.16.2+build.25
 loader_version=0.9.1+build.205
 
 # Mod Properties
-mod_version = 1.4.3
+mod_version = 1.5.0-dev2
 maven_group = me.lambdaurora.lambdacontrols
 archives_base_name = lambdacontrols
 
