:bookmark: LambdaControls v1.5.0: Update to Minecraft 1.16.2.

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ yarn_mappings=1.16.2+build.25
 loader_version=0.9.1+build.205
 
 # Mod Properties
-mod_version = 1.5.0-dev2
+mod_version = 1.5.0
 maven_group = me.lambdaurora.lambdacontrols
 archives_base_name = lambdacontrols
 
