--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.16.2
-yarn_mappings=1.16.2+build.25
-loader_version=0.9.1+build.205
+minecraft_version=1.16.5
+yarn_mappings=1.16.5+build.5
+loader_version=0.11.3
 
 # Mod Properties
-mod_version = 1.5.0
+mod_version = 1.6.0
 maven_group = me.lambdaurora.lambdacontrols
 archives_base_name = lambdacontrols
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.17.2+build.396-1.16
-spruceui_version=1.6.4
+fabric_version=0.32.0+1.16
+spruceui_version=2.0.4-1.16
 modmenu_version=1.14.6+build.31
