Fix gradle stupidity.

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,19 @@
+buildscript {
+    dependencies {
+        constraints {
+            ["asm", "asm-util", "asm-tree", "asm-analysis"].each {
+                classpath("org.ow2.asm:$it") {
+                    version { require("9.1") }
+                    because("Fabric's TinyRemapper requires ASM 9")
+                }
+            }
+        }
+    }
+}
+
 plugins {
-    id 'java-library'
     id 'fabric-loom' version '0.6-SNAPSHOT'
+    id 'java-library'
     id 'maven-publish'
     id 'com.github.johnrengelman.shadow' version '6.1.0'
     id 'org.cadixdev.licenser' version '0.5.0'
